# CalculatePower

./: graphic_funtion.py  main.py  model.py  pyproject.toml
