[project]
name = "calculatepower"
version = "0.1.0"
description = ""
authors = [
    {name = "Volodymyr Morhun",email = "vo82va@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
